--- a/post-opportunity.html
+++ b/post-opportunity.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Post New Opportunity - InternMatch</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header class="navbar">
@@ -154,7 +154,7 @@
       </div>
     </footer>
 
-    <script src="js/script.js"></script>
-    <script src="js/recruiter-script.js"></script>
+    <script src="script.js"></script>
+    <script src="recruiter-script.js"></script>
   </body>
 </html>
