--- a/student-profile.html
+++ b/student-profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student Profile - InternMatch</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header class="navbar">
@@ -176,7 +176,7 @@
       </div>
     </footer>
 
-    <script src="js/script.js"></script>
-    <script src="js/student-script.js"></script>
+    <script src="script.js"></script>
+    <script src="student-script.js"></script>
   </body>
 </html>
